# nuno-player

./: .gitignore  .gitmodules  BUYLIST.md  CMakeLists.txt  Development Strategy  NUNO Player plan  README.md  build instructions  to-do-list
cmake/: arm-none-eabi-gcc.cmake  test_dependencies.cmake
cmake/modules/: FindCMSIS.cmake  FindFreeRTOS.cmake  FindLibFLAC.cmake  FindSTM32H7xx_HAL_Driver.cmake
config/: cmock_config.yaml
docs/reference/ui/: menu_items.c  ui_state.h
docs/reference/web-simulator/: index.html  simulator.jsx
include/nuno/: audio_buffer.h  audio_codec.h  audio_i2s.h  audio_pipeline.h  audio_task.h  board_config.h  device_profile.h  display.h  dma.h  es9038q2m.h  filesystem.h  format_decoder.h  format_handlers.h  gpio.h  hal_types.h  input.h  input_mapper.h  music_catalog.h  music_library.h  platform.h  stm32h7xx_hal.h  trackpad.h
src/core/audio/: audio_buffer.c  audio_pipeline.c  audio_task.c  format_decoder.c  format_handlers.c  music_catalog.c  music_library.c
src/core/ui/: input_mapper.c  menu_items.c  menu_items.h  menu_renderer.c  menu_renderer.h  ui_state.c  ui_state.h  ui_tasks.c  ui_tasks.h
src/drivers/es9038q2m/: es9038q2m.c  es9038q2m.h  es9038q2m_codec.c
src/drivers/wm8960/: wm8960.c
src/platform/: audio_i2s.c  audio_task.c  dma.c  filesystem.c  gpio.c  i2c.c  main.c  stm32h7xx_hal_mock.c
src/platform/input/: trackpad.c
src/platform/sim/: audio_codec_sim.c  audio_controller.c  audio_controller.h  chassis_render.h  chassis_scene.h  device_profiles.c  filesystem_sim.c  main_ui_test.c  platform_sim.c  sdl_mock_display.c
tests/drivers/: es9038q2m_tests.c
tests/mocks/: mock_platform.c  mock_platform.h  stm32h7xx_hal_mock.c
tests/platform/: platform_tests.c
